# MiniClaudeCode--Agent-Runtime

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Git Workflow 工程闭环.md  Memory and Context Engineering 长期记忆与上下文压缩层.md  Planner Executor Evaluator 长任务 Harness.md  architecture.md  engineering_change_log.md  第一块 tool_runtime_upgrade.md  第四块长期记忆与上下文压缩层.md
miniclaudecode/: agent_loop.py  cli.py  config.py  context.py  errors.py  permissions.py  workspace.py
miniclaudecode/git_workflow/: __init__.py  commit_message.py  diff_summary.py  test_runner.py  workflow.py  worktree.py
miniclaudecode/harness/: __init__.py  artifacts.py  evaluator.py  executor.py  planner.py  report.py  task_harness.py
miniclaudecode/memory/: __init__.py  context_builder.py  project_index.py  records.py  store.py  summarizer.py
miniclaudecode/runtime/: __init__.py  compression.py  schema_validator.py  tool_loader.py  tool_runtime.py  tracing.py
miniclaudecode/tools/: __init__.py  base.py  bash_tool.py  diff_utils.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py
tests/: test_agent_loop.py  test_cli.py  test_config.py  test_e2e_agent_task.py  test_error_presenter.py  test_git_workflow_commit_message.py  test_git_workflow_diff_summary.py  test_git_workflow_test_runner.py  test_git_workflow_workflow.py  test_git_workflow_worktree.py  test_harness_artifacts.py  test_harness_evaluator.py  test_harness_executor.py  test_harness_planner.py  test_harness_report.py  test_harness_task_harness.py  test_memory_context_builder.py  test_memory_project_index.py  test_memory_records.py  test_memory_store.py  test_memory_summarizer.py  test_runtime.py  test_tools.py
tests/fixtures/e2e_repo/tests/: test_calculator.py
