[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaudecode"
version = "0.1.0"
description = "A lightweight Python implementation of an AI coding agent runtime."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "miniClaudeCode contributors" }
]
dependencies = [
  "anthropic>=0.42.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
miniclaudecode = "miniclaudecode.cli:main"

[tool.setuptools.packages.find]
include = ["miniclaudecode*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
