[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniclaudecode"
version = "0.1.0"
description = "A lightweight Python implementation of an AI coding agent runtime."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "miniClaudeCode contributors" }
]
dependencies = [
  "anthropic>=0.42.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "coverage>=7.0.0",
  "mypy>=1.8.0",
  "ruff>=0.5.0",
  "types-jsonschema>=4.0.0",
]

[project.scripts]
miniclaudecode = "miniclaudecode.cli:main"

[tool.setuptools.packages.find]
include = ["miniclaudecode*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["miniclaudecode"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.mypy]
python_version = "3.9"
packages = ["miniclaudecode"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
